--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -1,5 +1,5 @@
 <html>
-<body>
+<body style="margin: 30px; margin-top: 30px;">
 <h3>Sal's Shoulder </h3>
 <p/>
 <i> Friday June 26, 1987 </i>
@@ -47,7 +47,7 @@ One day not long after our move in when we were all out in the driveway working 
 a '71 with the 455, dialing in a new Holley, Sal had walked up and introduced himself,
 pointing back toward his house and the green and white cruiser.&nbsp;&nbsp;He'd said he personally 
 didn't mind the noise but knew certain neighbors would soon complain.&nbsp;&nbsp;He advised we adopt an
-8PM cutoff and also that we introduce ourselves to everyone in a friendly way,
+8 p.m. cutoff and also that we introduce ourselves to everyone in a friendly way,
 pass out our phone number so they would be inclined to tell us when enough was enough 
 rather than call the law.&nbsp;&nbsp;One of my roommates suggested a BBQ and Sal said that sounded 
 like a fine idea.&nbsp;&nbsp;So that became the Friday tradition, a weekly bribe.&nbsp;&nbsp;
