--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -5,19 +5,19 @@
 <i> Friday June 26, 1987 </i>
 <p/>
 I was 25 and testosterone practically controlled the weather.&nbsp;&nbsp;
-Earlier that year some old friends from Minnesota had come out to California
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;Earlier that year some old friends from Minnesota had come out to California
 and I had found us a house to rent.&nbsp;&nbsp;They all brought motorcycles, and I had
 just begun a personal campaign of racing on the weekends.&nbsp;&nbsp;One of my friends
 was an aircraft mechanic and we rebuilt the engines on everything we had
-multiple times because we blew them up multiple times, my race bike practically
+multiple times because we blew them up multiple times, my race bike virtually
 every other week.&nbsp;&nbsp;On the rare occasions I wasn't rebuilding that bike during the week
 I was riding it to work to determine if the latest tune had improved power.&nbsp;&nbsp;
 I'd attach a mirror, but no turn signals, license plate, or lights.&nbsp;&nbsp;
 Track tires so sticky they'd collect cigarette butts and lotto scratchers.&nbsp;&nbsp;Loud exhaust.&nbsp;&nbsp;
 Blood red bodywork and leather onesie to match, both with black asphalt scuffs.&nbsp;&nbsp;
 Vehicle performance is nothing, of course, without skill and knowledge of the course.&nbsp;&nbsp;
-There were business parks all around with winding streets, curving lots packed with cars
-and a few loading docks.&nbsp;&nbsp;Two smart moves would put you out of sight,
+There were business parks all around with winding streets, curving lots packed with cars,
+a few loading docks, and branching jogging paths.&nbsp;&nbsp;Two smart moves would put you out of sight,
 and I ran from police routinely with perfect success.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;That afternoon I left work early.&nbsp;&nbsp;Hwy 237 is a dozen straight miles
 with eight stop lights.&nbsp;&nbsp;Ideal for practicing my launch technique and 
@@ -64,11 +64,11 @@ if he had a TV in his bedroom.&nbsp;&nbsp;It was through a square archway that l
 The master bedroom door had to be open from what I was hearing.&nbsp;&nbsp;I thought that even if I peeked
 through and he happened to see me, I could explain why I was in his house.&nbsp;&nbsp;Might get awkward,
 especially if he was jerking off on his bed.&nbsp;&nbsp;But hey.&nbsp;&nbsp;
-<br/>&nbsp;&nbsp;&nbsp;&nbsp;A few weeks earlier he had offered a ride-along in his cruiser for a few hours
-on a Monday afternoon.&nbsp;&nbsp;I skipped work for it.&nbsp;&nbsp;It was weird being in the front passenger seat,
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;A few weeks earlier he had offered a Monday afternoon ride-along in his cruiser.&nbsp;&nbsp;
+I skipped work for it.&nbsp;&nbsp;It was weird being in the front passenger seat,
 and also cramped:  radio gear intruded and three clipboards were Velcroed across the face of the dash.&nbsp;&nbsp;
 One held a compilation of BOLOs from agencies all around the Bay.&nbsp;&nbsp;
-Smack in the middle of the first page was a sketchy description of me and my bike.&nbsp;&nbsp;For a few seconds
+Smack in the middle of the first page was a sketchy description of me and my bike.&nbsp;&nbsp;For a minute
 I thought he'd tricked me.&nbsp;&nbsp;But we just drove around.&nbsp;&nbsp;Sal pointed things out.&nbsp;&nbsp;Many drivers took 
 their foot off the gas when they noticed the cruiser in their mirror, mostly those going the limit.&nbsp;&nbsp;
 Sal approved:  at least they were checking.&nbsp;&nbsp;But of those, it was fun to note how many rolled windows 
@@ -76,19 +76,19 @@ up or down.&nbsp;&nbsp;Power windows: a convenient way to look suspect.&nbsp;&nb
 Nothing exciting had happened, and Sal said it often didn't.&nbsp;&nbsp;The police patrolled much more
 than the sheriffs did, and were usually the first to handle most incidents.&nbsp;&nbsp;Still, it had 
 felt like a real welcome, almost a bonding experience.&nbsp;&nbsp;I was grateful, and had told him so.&nbsp;&nbsp;
-<br/>&nbsp;&nbsp;&nbsp;&nbsp;With those positives in mind, I leaned around the archway.&nbsp;&nbsp;Sal was standing in the doorway
-to the master bedroom.&nbsp;&nbsp;He was wearing his uniform boots and trousers, but no gun belt and no shirt.&nbsp;&nbsp;
-In fact, he held his regular belt in his left hand.&nbsp;&nbsp;The buckle dangled near the floor.&nbsp;&nbsp;
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;With those positives in mind, I leaned around the archway.&nbsp;&nbsp;Sal was ten feet away, in the doorway
+to the master bedroom.&nbsp;&nbsp;Sweat made his back hair topopgraphical.&nbsp;&nbsp;Uniform boots and trousers, but no gun belt.&nbsp;&nbsp;
+In fact, he held a regular belt in his left hand, folded in half.&nbsp;&nbsp;
 I could see over his shoulder into the room.&nbsp;&nbsp;His wife, Dee, was standing on their bed.&nbsp;&nbsp;
 Or rather, she had one foot on a pillow and the other on a nightstand with her
 back pressed against the wall.&nbsp;&nbsp;
 She was naked and covered in bruises.&nbsp;&nbsp;Multicolored arms, torso, thighs,
-scabbed in places, with a few fresh bleeding welts.&nbsp;&nbsp;
+scabbed in places, with at least two fresh bleeding welts.&nbsp;&nbsp;
 And over her husband's shoulder, she saw me.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;Her expression changed from animal to human, like I was a cloud shading her with a new dimension of sorrow.&nbsp;&nbsp;
 She recognized me, but what was
 I doing there?&nbsp;&nbsp;Sal saw the change, saw her eyes, and started to turn his head.&nbsp;&nbsp;
-<br/>&nbsp;&nbsp;&nbsp;&nbsp;The calculation for me was easy, flashcard stuff.&nbsp;&nbsp;I couldn't allow him to see me, I couldn't
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;The calculation for me was easy, reptilian flashcard stuff.&nbsp;&nbsp;I couldn't allow him to see me, I couldn't
 allow him to continue.&nbsp;&nbsp;My feet moved and the .45 came out of my leathers and fired.&nbsp;&nbsp;The ACP round is
 subsonic, but loud at the range and absolutely deafening in a residential hallway.&nbsp;&nbsp;I hadn't braced my 
 arm and the recoil sent the gun back and punched my collarbone, luckily an area with a plastic armored 
@@ -102,7 +102,7 @@ Auditorily, intellectually, emotionally.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;By the time I reached my driveway and waded into the garage I was up to my chin in second-guessing.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;I could have used a payphone to anonymously call for help.&nbsp;&nbsp;
 But Dee hadn't, perhaps knowing responding officers would side with Sal.&nbsp;&nbsp;
-<br/>&nbsp;&nbsp;&nbsp;&nbsp;I could have fired into the floor or ceiling, at best briefly stunning him, but likely becoming a 
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;I could have fired into the floor or ceiling, at best briefly jangling him, but likely becoming a 
 disappeared witnesss when he recovered his wits and firearm.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;I could have just rung the doorbell until he came to the door.&nbsp;&nbsp;Yeah, see above.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;Possibly related to the roaring in my ears I had a vision of myself being pulled backward toward
@@ -111,7 +111,8 @@ through a spray of magical thinking.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;But racing had taught that even wild slides can be saved by steadfastly looking where I wanted to go.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;So.&nbsp;&nbsp;Look.&nbsp;&nbsp;Still no cars in other driveways.&nbsp;&nbsp;Now what?&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;When a nightmare is bad enough, you won't realize you're already looking through the spray.&nbsp;&nbsp;
-I could have just jumped back on the bike.&nbsp;&nbsp;Instead I went for peek-a-boo, despite implausible deniability.&nbsp;&nbsp;
+I could have just jumped back on the bike.&nbsp;&nbsp;Instead I went for peek-a-boo, implausible deniability 
+be damned.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;From the workbench I took a fresh shop rag from the bag and
 wiped the gun.&nbsp;&nbsp;Then I found the biggest screwdriver we had, an ancient thing with an orange and black
 striped handle.&nbsp;&nbsp;We used it mostly as a pry bar.&nbsp;&nbsp;I stuck the end in the gun barrel and walked through
@@ -143,8 +144,8 @@ of lighter fluid and then stepped back to where I was out of the fume zone and s
 wooden match, tossing it in the same gesture à la my dad.&nbsp;&nbsp;Got a good fireball that rattled the 
 hanging utensiles.&nbsp;&nbsp;I wondered if I was too wired to have sex one last time.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;In the kitchen Bev was slapping hamburger into patties.&nbsp;&nbsp;I turned her around and boosted
-her up onto the counter.&nbsp;&nbsp;Ice cream.&nbsp;&nbsp;Probably a Frosty from Wendy's.&nbsp;&nbsp;She grabbed my shirt
-and pulled it over my head and wiped her hands on it and tossed it in the sink.&nbsp;&nbsp;
+her up onto the counter.&nbsp;&nbsp;Ice cream.&nbsp;&nbsp;Probably a Frosty from Wendy's.&nbsp;&nbsp;She pulled my shirt
+over my head and wiped her hands on it and tossed it in the sink.&nbsp;&nbsp;
 Ready to go, as per.&nbsp;&nbsp;Roof, food, weed, TV, no job, an arrangement established the day we met.&nbsp;&nbsp;
 She pointed her toes and kicked off her sandals.&nbsp;&nbsp;I heard them hit the cabinets and then
 the floor, but then she tensed.&nbsp;&nbsp;"Hear that?"&nbsp;&nbsp;
@@ -159,7 +160,7 @@ door would log my entry.&nbsp;&nbsp;And, what, I'd eat break room vending machin
 I could fly up to San Francisco and beg a friend to help me.&nbsp;&nbsp;Hit my bank, maybe.&nbsp;&nbsp;Then fly again.&nbsp;&nbsp;
 South?&nbsp;&nbsp;North?&nbsp;&nbsp;Planes were probably out.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"It's cool," I said.&nbsp;&nbsp;I pulled my shirt on inside out and stepped around to the front door.&nbsp;&nbsp;
-<br/>&nbsp;&nbsp;&nbsp;&nbsp;It was a parade.&nbsp;&nbsp;Three cop cars, ambulance, and a damn fire engine.&nbsp;&nbsp;The cops slewed to sloppy
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;It was a parade.&nbsp;&nbsp;Three cop cars, ambulance, and a damn fire engine.&nbsp;&nbsp;My tax dollars.&nbsp;&nbsp;The cops slewed to sloppy
 diagonals in front of Sal's.&nbsp;&nbsp;The ambulance stopped on the near side of the street, the fire engine opposite.&nbsp;&nbsp;
 So, lawns then.&nbsp;&nbsp;And far side of the fire engine in case the cops got trigger-happy.&nbsp;&nbsp;
 I went into the garage and muscled my bike around so it was pointed out and 
@@ -189,7 +190,7 @@ Next level.&nbsp;&nbsp;No tomorrow.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;A month prior, coming off the corkscrew at Laguna Seca, through turns 9 and 10 and carrying 
 3rd gear through turn 11 onto the straight heading for the finish, I'd been hyper-aware of
 the rear tire slding a bit.&nbsp;&nbsp;The idea each race is to completely use up a set of tires.&nbsp;&nbsp;
-Otherwise you weren't trying hard enough.&nbsp;&nbsp;Tires wore much more near the edges
+Otherwise you weren't trying hard enough.&nbsp;&nbsp;Tires wore much more toward the edges
 than in the middle due to extra forces when cornering.&nbsp;&nbsp;The first few turns could be guesswork,
 especially if there had been a delayed start or you'd misgauged pressure versus ambient temperature.&nbsp;&nbsp;
 Given a lap or two, sliding usually became predictable.&nbsp;&nbsp;Different for each brand, but learnable.&nbsp;&nbsp;
@@ -216,10 +217,10 @@ but minutes too far now.&nbsp;&nbsp;So I hooked the belt loops of her jeans and 
 to commemorate a religious experience.&nbsp;&nbsp;
 The hood had a center ridge that ran from the windshield to the beak-like bumper.&nbsp;&nbsp;
 In April, on the afternoon I'd finally gotten the new carburetor properly jetted to let the big motor
-maintain a lumpy idle, around 500 RPM, Bev had perched on the nose of the car and in less than five seconds
+maintain a lumpy idle, around 550 RPM, Bev had perched on the nose of the car and in less than five seconds
 slapped the hood, slid off, and nearly dropped to her knees.&nbsp;&nbsp;I'd guided her around, opened the door,
-and let her collapse into the passenger seat where, with eyes closed and skin dewy, she'd said:  
-"Jesus tap-dancing Christ."&nbsp;&nbsp;
+and let her collapse into the passenger seat where, eyes closed and skin dewy, she'd whispered:  
+"Tap-dancing Christ."&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;All the professional responders were inside Sal's house.&nbsp;&nbsp;For a long time.&nbsp;&nbsp;
 I went back and forth about smoking a joint.&nbsp;&nbsp;
 There was nothing to see for so long, I grabbed a beer.&nbsp;&nbsp;Then at last the paramedics 
@@ -249,7 +250,7 @@ If neighbors come, it might seem--"&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"If we're careful.&nbsp;&nbsp;'S got wheels."&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;Then Rob came home.&nbsp;&nbsp;Then finally Bill.&nbsp;&nbsp;A few neighbors.&nbsp;&nbsp;No more cops.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;We ate burgers in the back yard.&nbsp;&nbsp;Beverly drank and smoked and laughed a bit more than usual.&nbsp;&nbsp;
-<br/>&nbsp;&nbsp;&nbsp;&nbsp;When Bill went inside to grab his tin of tobacco, I followed and then led him to the garage
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;When Bill went inside to get his tin of tobacco, I followed and then led him to the garage
 and closed the door.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"Dude," I said.&nbsp;&nbsp;"Got to tell you something."&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"Yeah?"&nbsp;&nbsp;Wary.&nbsp;&nbsp;
@@ -304,7 +305,7 @@ help too.&nbsp;&nbsp;Then he gave it a good arc and we heard the splash.&nbsp;&n
 mix of pride through conspiracy, envy born of naive fantasy, and a faint whiff of latent anger 
 with the potential for idiotic double-edged blackmail.&nbsp;&nbsp;But then Beverly rebranded it.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;We waited a week before I bought him a new Colt.&nbsp;&nbsp;
-<br/>&nbsp;&nbsp;&nbsp;&nbsp;During that week I had butterflies and was mostly useless at work.&nbsp;&nbsp;Things were okay with Bev though.&nbsp;&nbsp;
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;During that week I had butterflies and was mostly useless at work.&nbsp;&nbsp;Things were okay with Bev, though.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;Friday, we wheeled out the grill as usual and all the neighbors showed.&nbsp;&nbsp;The prevailing theories were
 heart attack, stroke, and frying pan.&nbsp;&nbsp;The last from Elanor, a busybody from across the street
 whose ancient hearing aids whistled the rockets'-red-glare part of the national anthem whenever she
