--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -77,7 +77,7 @@ Nothing exciting had happened, and Sal said it often didn't.&nbsp;&nbsp;The poli
 than the sheriffs did, and were usually the first to handle most incidents.&nbsp;&nbsp;Still, it had 
 felt like a real welcome, almost a bonding experience.&nbsp;&nbsp;I was grateful, and had told him so.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;With those positives in mind, I leaned around the archway.&nbsp;&nbsp;Sal was ten feet away, in the doorway
-to the master bedroom.&nbsp;&nbsp;Sweat made his back hair topopgraphical.&nbsp;&nbsp;Uniform boots and trousers, but no gun belt.&nbsp;&nbsp;
+to the master bedroom.&nbsp;&nbsp;Sweat made his back hair topographical.&nbsp;&nbsp;Uniform boots and trousers, but no gun belt.&nbsp;&nbsp;
 In fact, he held a regular belt in his left hand, folded in half.&nbsp;&nbsp;
 I could see over his shoulder into the room.&nbsp;&nbsp;His wife, Dee, was standing on their bed.&nbsp;&nbsp;
 Or rather, she had one foot on a pillow and the other on a nightstand with her
