--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -92,7 +92,7 @@ I doing there?&nbsp;&nbsp;Sal saw the change, saw her eyes, and started to turn 
 allow him to continue.&nbsp;&nbsp;My feet moved and the .45 came out of my leathers and fired.&nbsp;&nbsp;The ACP round is
 subsonic, but loud at the range and absolutely deafening in a residential hallway.&nbsp;&nbsp;I hadn't braced my 
 arm and the recoil sent the gun back and punched my collarbone, luckily an area with a plastic armored 
-pad under the leather.&nbsp;&nbsp;Sal went down, face to the carpet.&nbsp;&nbsp;At the edge of my narrowed vision
+pad under the leather.&nbsp;&nbsp;Sal went down, hewn, face to the carpet.&nbsp;&nbsp;At the edge of my narrowed vision
 I saw Dee jump from the bed, to the left, toward the master bath, leaving smears on the wall.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;I turned to leave, automatically moving to tuck the gun back under my leather, but stopped myself.&nbsp;&nbsp;
 I felt the barrel with my fingertips.&nbsp;&nbsp;Not even warm from a single round.&nbsp;&nbsp;Safe to put near my t-shirt.&nbsp;&nbsp;
@@ -117,11 +117,12 @@ be damned.&nbsp;&nbsp;
 wiped the gun.&nbsp;&nbsp;Then I found the biggest screwdriver we had, an ancient thing with an orange and black
 striped handle.&nbsp;&nbsp;We used it mostly as a pry bar.&nbsp;&nbsp;I stuck the end in the gun barrel and walked through
 the house, the living room, our sliding glass doors, into the brown grass of the back yard.&nbsp;&nbsp;Standing
-about ten feet from the redwood fence I cranked back and threw the Colt as far into the orchard
+After putting a quick eye to the biggest knothole in the gray redwood fence,
+I cranked back and threw the Colt as far into the orchard
 as I possibly could.&nbsp;&nbsp;Then I walked back to the garage and put the screwdriver away, binned the rag,
 scrubbed my hands and leather sleeve with a fresh rag spritzed with grease remover, binned it, 
 sat on the step leading inside and unzipped my boots, unzipped the cuffs of my leathers and 
-began peeling them off.&nbsp;&nbsp;I was mostly out when I heard my Firebird, about three blocks away.&nbsp;&nbsp;
+began peeling them off.&nbsp;&nbsp;I was mostly out when I heard my Firebird, about four blocks away.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;Beverly was remarkably deft with the clutch.&nbsp;&nbsp;There were three stop signs on our road, two 
 on an upward slope.&nbsp;&nbsp;She didn't stall the engine or spin the tires.&nbsp;&nbsp;
 I was slipping on the old pair of tennis shoes I kept in the garage
