--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -116,7 +116,7 @@ be damned.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;From the workbench I took a fresh shop rag from the bag and
 wiped the gun.&nbsp;&nbsp;Then I found the biggest screwdriver we had, an ancient thing with an orange and black
 striped handle.&nbsp;&nbsp;We used it mostly as a pry bar.&nbsp;&nbsp;I stuck the end in the gun barrel and walked through
-the house, the living room, our sliding glass doors, into the brown grass of the back yard.&nbsp;&nbsp;Standing
+the house, the living room, our sliding glass doors, into the brown grass of the back yard.&nbsp;&nbsp;
 After putting a quick eye to the biggest knothole in the gray redwood fence,
 I cranked back and threw the Colt as far into the orchard
 as I possibly could.&nbsp;&nbsp;Then I walked back to the garage and put the screwdriver away, binned the rag,
