--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -182,7 +182,7 @@ My two old canyon carvers were down.&nbsp;&nbsp;The 400 two-stroke had a hole in
 clapped-out rear shocks in a box on the garage floor.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;As I pulled over a shop stool and started unzipping my boots I said, "I need your shirt."&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;When I'd shucked the clammy cowhide off my legs and stood, Beverly was holding it out,
-her expression concern and confusion spackled with coquettishness.&nbsp;&nbsp;I hung it around my neck
+her expression concern and nascent comprehension spackled with coquettishness.&nbsp;&nbsp;I hung it around my neck
 and it all seemed a bit funny, both of us nearly naked in the garage with the big door open,
 breeze blowing, skin tightening, radios squawking words and codes outside. 
 The shirt smelled fantastic.&nbsp;&nbsp;Some situations offset others.&nbsp;&nbsp;Suddenly her chest was against mine,
