--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -24,7 +24,7 @@ with eight stop lights.&nbsp;&nbsp;Ideal for practicing my launch technique and
 listening for unacceptable engine noises at redline.&nbsp;&nbsp;The house was at the end of Knights Bridge Road.&nbsp;&nbsp;
 No cul du sac, just a fence with a few acres of apple trees on the other side.&nbsp;&nbsp;Nice day.&nbsp;&nbsp;Very quiet.&nbsp;&nbsp;
 Most driveways were still empty.&nbsp;&nbsp;I kept the revs down for the stay-at-homes enjoying their soaps.&nbsp;&nbsp;
-My driveway was also empty which meant Beverly was out buying groceries for the Friday BBQ.&nbsp;&nbsp;
+My driveway, last on the left, was also empty which meant Beverly was out buying groceries for the Friday BBQ.&nbsp;&nbsp;
 It was her only job outside the house.&nbsp;&nbsp;I pulled up and shut the bike down and pulled off my gloves
 and helmet, unlocked the front door and went through to the garage and hit the opener.&nbsp;&nbsp;
 I was pushing the bike into the garage when I heard it.&nbsp;&nbsp;
@@ -139,7 +139,10 @@ Making a grocery bag and flip-flops belong on a runway in Paris, she panthered u
 "Unload the heavy stuff?"&nbsp;&nbsp;Her tongue tasted like ice cream.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;I got out the big plastic coolers and grabbed the bags of ice from the trunk, layering in
 the green bottles of beer.&nbsp;&nbsp;Rolling Rock was our brand that summer.&nbsp;&nbsp;In between the clinking
-of glass I was straining for the sounds of sirens, but my ears were still ringing.&nbsp;&nbsp;I went around
+of glass I was straining for the sounds of sirens, but my ears were still ringing.&nbsp;&nbsp;
+Mixed in, there may have been a brief high-pitched squeal, like nails being pulled from wood, 
+but I couldn't be sure.&nbsp;&nbsp;Saw no beer foam in the ice.&nbsp;&nbsp;
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;I went around
 back and wheeled out the Weber and filled it with charcoal.&nbsp;&nbsp;I gave it a very liberal dousing
 of lighter fluid and then stepped back to where I was out of the fume zone and struck a
 wooden match, tossing it in the same gesture à la my dad.&nbsp;&nbsp;Got a good fireball that rattled the 
@@ -201,7 +204,7 @@ Beyond that you were likely riding on exposed cords and the romp could end befor
 There and then, we were at 112 on the left.&nbsp;&nbsp;During a slide the loss of traction means the tire is 
 spinning slightly faster than when fully hooked up.&nbsp;&nbsp;The tire is also smaller in diameter on edge
 than standing up so that factors in, too.&nbsp;&nbsp;The engine was pulling hard for victory,
-slightly above redline.&nbsp;&nbsp;As I rolled her out of that final turn, up on to the cooler center portion
+a thou below redline.&nbsp;&nbsp;As I rolled her out of that final turn, up on to the cooler center portion
 of the tire, I heard and felt the hookup.&nbsp;&nbsp;It was subtle, a soft grunt, which was good.&nbsp;&nbsp;
 A jerk could set everything wobbling.&nbsp;&nbsp;Instead, she smoothly started climbing her chain, front tire floating
 higher and higher above the track.&nbsp;&nbsp;Body english will let you steer a bit, but I was good with where we were going.&nbsp;&nbsp;
@@ -222,25 +225,27 @@ maintain a lumpy idle, around 550 RPM, Bev had perched on the nose of the car an
 slapped the hood, slid off, and nearly dropped to her knees.&nbsp;&nbsp;I'd guided her around, opened the door,
 and let her collapse into the passenger seat where, eyes closed and skin dewy, she'd whispered:  
 "Tap-dancing Christ."&nbsp;&nbsp;
-<br/>&nbsp;&nbsp;&nbsp;&nbsp;All the professional responders were inside Sal's house.&nbsp;&nbsp;For a long time.&nbsp;&nbsp;
-I went back and forth about smoking a joint.&nbsp;&nbsp;
-There was nothing to see for so long, I grabbed a beer.&nbsp;&nbsp;Then at last the paramedics 
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;As I was shuffling my pleasant memory file, the paramedics 
 rolled Sal out, not in a bag.&nbsp;&nbsp;Walking close behind was Dee, in a hoodie and black sweat pants.&nbsp;&nbsp;
-I realized that was how she was always dressed.&nbsp;&nbsp;Two pushed the gurney 
+I realized that was how she was always dressed.&nbsp;&nbsp;
+She was intently chewing on the side of her thumb, pausing every couple of seconds to inspect her work.&nbsp;&nbsp;
+Two paramedics pushed the gurney 
 into their rig, and then one of them extended a hand to help Dee up and in.&nbsp;&nbsp;
-Another closed the doors, then got behind the wheel.&nbsp;&nbsp;The ambulance made a multi-point turn because 
+She wiped her spit on her pant leg first.&nbsp;&nbsp;
+Another medic closed the doors, then got behind the wheel.&nbsp;&nbsp;The ambulance made a multi-point turn because 
 the fire engine was in the way.&nbsp;&nbsp;Then it drove away, lights and siren.&nbsp;&nbsp;
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;I grabbed a beer.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"What's happening?"&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"Sal got brought out of his house on a stretcher.&nbsp;&nbsp;Dee went with."&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"Shit," Bev said, sidling out of the garage.&nbsp;&nbsp;"Wow," hands in her hair, nervous near so many 
 flashing lights.&nbsp;&nbsp;I imagined her hair longer, in a mug shot.&nbsp;&nbsp;Maybe.&nbsp;&nbsp;Wow.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;The fire crew left, backing to the cross street and heading off in a different direction
-than they'd come.&nbsp;&nbsp;Then an unmarked Crown Vic arrived and a detective went inside.&nbsp;&nbsp;I opened another
-beer.&nbsp;&nbsp;I was halfway through it when one of my roommates came home.&nbsp;&nbsp;Eric parked down by the corner.&nbsp;&nbsp;
-Once past the light show he waved, I waved back.&nbsp;&nbsp;
+than they'd come.&nbsp;&nbsp;Then an unmarked Crown Vic arrived and a detective went inside.&nbsp;&nbsp;
+I was halfway through my beer when one of my roommates came home.&nbsp;&nbsp;Eric parked down by the corner.&nbsp;&nbsp;
+Once past the light show he waved and I raised by bottle.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"Holy crap," he said, leaning against the Firebird's door.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"Sal got taken out on a stretcher."&nbsp;&nbsp;
-<br/>&nbsp;&nbsp;&nbsp;&nbsp;He grabbed a beer.&nbsp;&nbsp;"We still grillin'?"&nbsp;&nbsp;
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;He grabbed a Rock and popped the cap using the bottom of his Bic.&nbsp;&nbsp;"We still grillin'?"&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"Ready to go."&nbsp;&nbsp;I thought about it.&nbsp;&nbsp;"But maybe we shouldn't do it out front this time.&nbsp;&nbsp;
 If neighbors come, it might seem--"&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"Like entertainment."&nbsp;&nbsp;
@@ -319,12 +324,13 @@ but he didn't look good.&nbsp;&nbsp;Everyone wanted to know.&nbsp;&nbsp;How was 
 to see who asked what first.&nbsp;&nbsp;I interrupted.&nbsp;&nbsp;"First, we need to know:  Sal, can you drink beer?"&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;He shook his head and croaked, "No.&nbsp;&nbsp;Meds."&nbsp;&nbsp;Bev ran inside and pulled an old 
 Perrier from some trench in the back of the fridge so he could hold a cold green bottle of fizz.&nbsp;&nbsp;
-<br/>&nbsp;&nbsp;&nbsp;&nbsp;Then Dee did the talking.&nbsp;&nbsp;"It was a burglar.&nbsp;&nbsp;He came in with a ski mask on.&nbsp;&nbsp;He saw Sal and shot
-him from behind.&nbsp;&nbsp;I hid in the bathroom.&nbsp;&nbsp;He stole a whole bunch of my jewelry.&nbsp;&nbsp;But whatever.&nbsp;&nbsp;
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;Then Dee did the talking.&nbsp;&nbsp;"It was a burglar.&nbsp;&nbsp;A skinny guy in a ski mask.&nbsp;&nbsp;
+Came in through a weak board in the back yard.&nbsp;&nbsp;He saw Sal and shot him from behind.&nbsp;&nbsp;
+I hid in the bathroom.&nbsp;&nbsp;He stole a whole bunch of my jewelry.&nbsp;&nbsp;But whatever.&nbsp;&nbsp;
 Sal's going to be okay."&nbsp;&nbsp;Qualified.&nbsp;&nbsp;"He lost a kidney, some intestine.&nbsp;&nbsp;
 The bullet missed his spine, but the shockwave did a bunch of nerve damage."&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;Someone asked if Sal would be going back to work.&nbsp;&nbsp;
-<br/>&nbsp;&nbsp;&nbsp;&nbsp;"Desk jockey," he said.&nbsp;&nbsp;
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;"Desk jockey," he said.&nbsp;&nbsp;No Kevlar colostomy bags, I assumed.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;Bev asked them if they wanted a burger or a dog.&nbsp;&nbsp;Sal said, "Dog.&nbsp;&nbsp;With ev'thing you've got."&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"Dee?" I said, risking eye contact.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"Burger," she said.&nbsp;&nbsp;
@@ -336,6 +342,7 @@ She took it over Sal's shoulder and said to me, "Thank you."&nbsp;&nbsp;Eye cont
 checked she hadn't shot Sal with his own gun.&nbsp;&nbsp;She must have flushed her jewelry.&nbsp;&nbsp;
 And put her clothes on before calling 9-1-1, because Sal wasn't in jail.&nbsp;&nbsp;Bandaids and gauze before clothes.&nbsp;&nbsp;
 And cleaned her blood off the wall.&nbsp;&nbsp;Slug in that wall?&nbsp;&nbsp;Two crimes, one scene.&nbsp;&nbsp;
+Dealt with splinters.&nbsp;&nbsp;
 Maybe put stuff in the washer.&nbsp;&nbsp;Bleach.&nbsp;&nbsp;But why?&nbsp;&nbsp;Mortification?&nbsp;&nbsp;Surely.&nbsp;&nbsp;But.&nbsp;&nbsp;Love?&nbsp;&nbsp;Of?&nbsp;&nbsp;
 And or, simply the simplest story she could think of?&nbsp;&nbsp;To keep me out of it?&nbsp;&nbsp;Thank you?&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;Beverly never mentioned not hearing the woman anymore.&nbsp;&nbsp;She liked things simple, too.&nbsp;&nbsp;
