--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -140,7 +140,7 @@ Making a grocery bag and flip-flops belong on a runway in Paris, she panthered u
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;I got out the big plastic coolers and grabbed the bags of ice from the trunk, layering in
 the green bottles of beer.&nbsp;&nbsp;Rolling Rock was our brand that summer.&nbsp;&nbsp;In between the clinking
 of glass I was straining for the sounds of sirens, but my ears were still ringing.&nbsp;&nbsp;
-Mixed in, there may have been a brief high-pitched squeal, like nails being pulled from wood, 
+There may have been a brief high-pitched squeal, like nails being pulled from wood, 
 but I couldn't be sure.&nbsp;&nbsp;Saw no beer foam in the ice.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;I went around
 back and wheeled out the Weber and filled it with charcoal.&nbsp;&nbsp;I gave it a very liberal dousing
@@ -166,7 +166,7 @@ South?&nbsp;&nbsp;North?&nbsp;&nbsp;Planes were probably out.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"It's cool," I said.&nbsp;&nbsp;I pulled my shirt on inside out and stepped around to the front door.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;It was a parade.&nbsp;&nbsp;Three cop cars, ambulance, and a damn fire engine.&nbsp;&nbsp;My tax dollars.&nbsp;&nbsp;The cops slewed to sloppy
 diagonals in front of Sal's.&nbsp;&nbsp;The ambulance stopped on the near side of the street, the fire engine opposite.&nbsp;&nbsp;
-So, lawns then.&nbsp;&nbsp;And far side of the fire engine in case the cops got trigger-happy.&nbsp;&nbsp;
+So, lawns then.&nbsp;&nbsp;And go far side of the fire engine in case the cops got trigger-happy.&nbsp;&nbsp;
 I went into the garage and muscled my bike around so it was pointed out and 
 went about pulling my sticky leathers back on.&nbsp;&nbsp;Always legs, zip cuffs, boots, zip, arms, zip cuffs, front zip.&nbsp;&nbsp;
 I got as far as my boots when I realized it 
@@ -225,7 +225,7 @@ maintain a lumpy idle, around 550 RPM, Bev had perched on the nose of the car an
 slapped the hood, slid off, and nearly dropped to her knees.&nbsp;&nbsp;I'd guided her around, opened the door,
 and let her collapse into the passenger seat where, eyes closed and skin dewy, she'd whispered:  
 "Tap-dancing Christ."&nbsp;&nbsp;
-<br/>&nbsp;&nbsp;&nbsp;&nbsp;As I was shuffling my pleasant memory file, the paramedics 
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;As I was shuffling my portfolio, the paramedics 
 rolled Sal out, not in a bag.&nbsp;&nbsp;Walking close behind was Dee, in a hoodie and black sweat pants.&nbsp;&nbsp;
 I realized that was how she was always dressed.&nbsp;&nbsp;
 She was intently chewing on the side of her thumb, pausing every couple of seconds to inspect her work.&nbsp;&nbsp;
@@ -341,7 +341,7 @@ She took it over Sal's shoulder and said to me, "Thank you."&nbsp;&nbsp;Eye cont
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;The burglar story was pretty iffy.&nbsp;&nbsp;But no recently fired weapon was found.&nbsp;&nbsp;I'm sure the cops
 checked she hadn't shot Sal with his own gun.&nbsp;&nbsp;She must have flushed her jewelry.&nbsp;&nbsp;
 And put her clothes on before calling 9-1-1, because Sal wasn't in jail.&nbsp;&nbsp;Bandaids and gauze before clothes.&nbsp;&nbsp;
-And cleaned her blood off the wall.&nbsp;&nbsp;Slug in that wall?&nbsp;&nbsp;Two crimes, one scene.&nbsp;&nbsp;
+And cleaned her blood off the wall.&nbsp;&nbsp;(Slug in that wall?&nbsp;&nbsp;Two crimes, one scene.)
 Dealt with splinters.&nbsp;&nbsp;
 Maybe put stuff in the washer.&nbsp;&nbsp;Bleach.&nbsp;&nbsp;But why?&nbsp;&nbsp;Mortification?&nbsp;&nbsp;Surely.&nbsp;&nbsp;But.&nbsp;&nbsp;Love?&nbsp;&nbsp;Of?&nbsp;&nbsp;
 And or, simply the simplest story she could think of?&nbsp;&nbsp;To keep me out of it?&nbsp;&nbsp;Thank you?&nbsp;&nbsp;
