--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -134,7 +134,7 @@ Discussing weekend plans.&nbsp;&nbsp;Couldn't have been me.&nbsp;&nbsp;Timestamp
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"Home early."&nbsp;&nbsp;That smooth contralto.&nbsp;&nbsp;
 She was thoroughly tanned and her auburn hair was sun-bleached to a lighter red.&nbsp;&nbsp;She never 
 wore a bra, counting on logos to keep her nipples from showing through her/my shirts.&nbsp;&nbsp;
-Penzoil that day.&nbsp;&nbsp;(A sponsor, gave me a box of them plus stickers and products by the gallon.)
+Penzoil that day.&nbsp;&nbsp;(A sponsor, gave me a box of them plus stickers and products by the gallon.)&nbsp;&nbsp;
 Making a grocery bag and flip-flops belong on a runway in Paris, she panthered up and purred,
 "Unload the heavy stuff?"&nbsp;&nbsp;Her tongue tasted like ice cream.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;I got out the big plastic coolers and grabbed the bags of ice from the trunk, layering in
@@ -341,7 +341,7 @@ She took it over Sal's shoulder and said to me, "Thank you."&nbsp;&nbsp;Eye cont
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;The burglar story was pretty iffy.&nbsp;&nbsp;But no recently fired weapon was found.&nbsp;&nbsp;I'm sure the cops
 checked she hadn't shot Sal with his own gun.&nbsp;&nbsp;She must have flushed her jewelry.&nbsp;&nbsp;
 And put her clothes on before calling 9-1-1, because Sal wasn't in jail.&nbsp;&nbsp;Bandaids and gauze before clothes.&nbsp;&nbsp;
-And cleaned her blood off the wall.&nbsp;&nbsp;(Slug in that wall?&nbsp;&nbsp;Two crimes, one scene.)
+And cleaned her blood off the wall.&nbsp;&nbsp;(Slug in that wall?&nbsp;&nbsp;Two crimes, one scene.)&nbsp;&nbsp;
 Dealt with splinters.&nbsp;&nbsp;
 Maybe put stuff in the washer.&nbsp;&nbsp;Bleach.&nbsp;&nbsp;But why?&nbsp;&nbsp;Mortification?&nbsp;&nbsp;Surely.&nbsp;&nbsp;But.&nbsp;&nbsp;Love?&nbsp;&nbsp;Of?&nbsp;&nbsp;
 And or, simply the simplest story she could think of?&nbsp;&nbsp;To keep me out of it?&nbsp;&nbsp;Thank you?&nbsp;&nbsp;
