--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -329,8 +329,10 @@ Came in through a weak board in the back yard.&nbsp;&nbsp;He saw Sal and shot hi
 I hid in the bathroom.&nbsp;&nbsp;He stole a whole bunch of my jewelry.&nbsp;&nbsp;But whatever.&nbsp;&nbsp;
 Sal's going to be okay."&nbsp;&nbsp;Qualified.&nbsp;&nbsp;"He lost a kidney, some intestine.&nbsp;&nbsp;
 The bullet missed his spine, but the shockwave did a bunch of nerve damage."&nbsp;&nbsp;
-<br/>&nbsp;&nbsp;&nbsp;&nbsp;Someone asked if Sal would be going back to work.&nbsp;&nbsp;
-<br/>&nbsp;&nbsp;&nbsp;&nbsp;"Desk jockey," he said.&nbsp;&nbsp;No Kevlar colostomy bags, I assumed.&nbsp;&nbsp;
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;Elanor asked:  "Will he be going back to work?"&nbsp;&nbsp;
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;"Desk jockey," he said.&nbsp;&nbsp;
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;No Kevlar colostomy bags, I thought, literally biting my tongue, 
+remorse running a classic close second to restraint.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;Bev asked them if they wanted a burger or a dog.&nbsp;&nbsp;Sal said, "Dog.&nbsp;&nbsp;With ev'thing you've got."&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"Dee?" I said, risking eye contact.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"Burger," she said.&nbsp;&nbsp;
