--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -242,7 +242,7 @@ flashing lights.&nbsp;&nbsp;I imagined her hair longer, in a mug shot.&nbsp;&nbs
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;The fire crew left, backing to the cross street and heading off in a different direction
 than they'd come.&nbsp;&nbsp;Then an unmarked Crown Vic arrived and a detective went inside.&nbsp;&nbsp;
 I was halfway through my beer when one of my roommates came home.&nbsp;&nbsp;Eric parked down by the corner.&nbsp;&nbsp;
-Once past the light show he waved and I raised by bottle.&nbsp;&nbsp;
+Once past the light show he waved and I raised my bottle.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"Holy crap," he said, leaning against the Firebird's door.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"Sal got taken out on a stretcher."&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;He grabbed a Rock and popped the cap using the bottom of his Bic.&nbsp;&nbsp;"We still grillin'?"&nbsp;&nbsp;
@@ -331,7 +331,7 @@ Sal's going to be okay."&nbsp;&nbsp;Qualified.&nbsp;&nbsp;"He lost a kidney, som
 The bullet missed his spine, but the shockwave did a bunch of nerve damage."&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;Elanor asked:  "Will he be going back to work?"&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"Desk jockey," he said.&nbsp;&nbsp;
-<br/>&nbsp;&nbsp;&nbsp;&nbsp;No Kevlar colostomy bags, I thought, literally biting my tongue, 
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;No Kevlar colostomy bags, I thought, biting my tongue, 
 remorse running a classic close second to restraint.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;Bev asked them if they wanted a burger or a dog.&nbsp;&nbsp;Sal said, "Dog.&nbsp;&nbsp;With ev'thing you've got."&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"Dee?" I said, risking eye contact.&nbsp;&nbsp;
