--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -324,10 +324,10 @@ but he didn't look good.&nbsp;&nbsp;Everyone wanted to know.&nbsp;&nbsp;How was 
 to see who asked what first.&nbsp;&nbsp;I interrupted.&nbsp;&nbsp;"First, we need to know:  Sal, can you drink beer?"&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;He shook his head and croaked, "No.&nbsp;&nbsp;Meds."&nbsp;&nbsp;Bev ran inside and pulled an old 
 Perrier from some trench in the back of the fridge so he could hold a cold green bottle of fizz.&nbsp;&nbsp;
-<br/>&nbsp;&nbsp;&nbsp;&nbsp;Then Dee did the talking.&nbsp;&nbsp;"It was a burglar.&nbsp;&nbsp;A skinny guy in a ski mask.&nbsp;&nbsp;
-Came in through a weak board in the back yard.&nbsp;&nbsp;He saw Sal and shot him from behind.&nbsp;&nbsp;
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;Then Dee did the talking.&nbsp;&nbsp;"It was a burglar, a skinny guy in a ski mask.&nbsp;&nbsp;
+He came in through a weak board in the back yard.&nbsp;&nbsp;He saw Sal and shot him from behind.&nbsp;&nbsp;
 I hid in the bathroom.&nbsp;&nbsp;He stole a whole bunch of my jewelry.&nbsp;&nbsp;But whatever.&nbsp;&nbsp;
-Sal's going to be okay."&nbsp;&nbsp;Qualified.&nbsp;&nbsp;"He lost a kidney, some intestine.&nbsp;&nbsp;
+Sal's going to be okay."&nbsp;&nbsp;Qualified.&nbsp;&nbsp;"He lost a kidney and some intestine.&nbsp;&nbsp;
 The bullet missed his spine, but the shockwave did a bunch of nerve damage."&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;Elanor asked:  "Will he be going back to work?"&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"Desk jockey," he said.&nbsp;&nbsp;
@@ -338,13 +338,16 @@ remorse running a classic close second to restraint.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;"Burger," she said.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;Eric said, "Coming right up, if rare is okay."&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;I grabbed a Rolling Rock from the cooler and opened it and handed it to Dee.&nbsp;&nbsp;
-She took it over Sal's shoulder and said to me, "Thank you."&nbsp;&nbsp;Eye contact.&nbsp;&nbsp;But that was that.&nbsp;&nbsp;
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;She took it over Sal's shoulder.&nbsp;&nbsp;
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;"Thank you."&nbsp;&nbsp;
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;Eye contact.&nbsp;&nbsp;But that was that.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;Except for thinking about what she must have done after I'd left.&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;The burglar story was pretty iffy.&nbsp;&nbsp;But no recently fired weapon was found.&nbsp;&nbsp;I'm sure the cops
 checked she hadn't shot Sal with his own gun.&nbsp;&nbsp;She must have flushed her jewelry.&nbsp;&nbsp;
 And put her clothes on before calling 9-1-1, because Sal wasn't in jail.&nbsp;&nbsp;Bandaids and gauze before clothes.&nbsp;&nbsp;
 And cleaned her blood off the wall.&nbsp;&nbsp;(Slug in that wall?&nbsp;&nbsp;Two crimes, one scene.)&nbsp;&nbsp;
-Dealt with splinters.&nbsp;&nbsp;
+Run outside, wrestled that piece of redwood, collecting splinters; insult to emergency and 
+yet another thing to hide.&nbsp;&nbsp;
 Maybe put stuff in the washer.&nbsp;&nbsp;Bleach.&nbsp;&nbsp;But why?&nbsp;&nbsp;Mortification?&nbsp;&nbsp;Surely.&nbsp;&nbsp;But.&nbsp;&nbsp;Love?&nbsp;&nbsp;Of?&nbsp;&nbsp;
 And or, simply the simplest story she could think of?&nbsp;&nbsp;To keep me out of it?&nbsp;&nbsp;Thank you?&nbsp;&nbsp;
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;Beverly never mentioned not hearing the woman anymore.&nbsp;&nbsp;She liked things simple, too.&nbsp;&nbsp;
